chore: clean-up formatting